--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <header>ALURAFLIX</header>
+<header>ALURAFLIX</header>
+<header>ALURAFLIX</header>
+
+
+<h1>Barbie </h1>
+<p>#barbie</p>
+<header>ALURAFLIX</header>
+
+
+<h1>Barbie </h1>
+<p>#barbie</p>
+
+
+
+<iframe width="560" height="315" src=https://youtu.be/Ujs1Ud7k49M?si=TkMdRVtKGt-6bXMm <header>ALURAFLIX</header> 
+    
+    
