--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Barbie</h1>
         <p>#barbie</p>
         ?s
-        <iframe width="560" height="315" src=https://youtu.be/Ujs1Ud7k49M?si=Xsv-JdzDWMLYW6_y=TkMdRVtKGt-6bXMm <header>ALURAFLIX</header> 
+        <<iframe width="560" height="315" src="https://www.youtube.com/embed/Ujs1Ud7k49M?si=vHp8A9e4sSaOenBe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
         
         <iframe width="560" height="315" src= https://youtu.be/Ujs1Ud7k49M?si=Xsv-JdzDWMLYW6_y=c93nZtO1DTNYueO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
