--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <header>ALURAFeliz</header>
 
 
-<h1>Barbie </h1>
-<p>#barbie</p>
+<h1>corinthians </h1>
+<p>#sccp</p>
 <header>ALURAFLIX</header>
 
 
@@ -20,8 +20,8 @@
         <header>ALURAFLIX</header>
         
         
-        <h1>Barbie</h1>
-        <p>#barbie</p>
+        <h1>sccp</h1>
+        <p>#corinthians</p>
         ?s
         <<iframe width="560" height="315" src="https://www.youtube.com/embed/L5nOPn2xf9E?si=oPEkSrPA3CqGnJyq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
